# OpenGLSandboxC

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
res/shader/: color_fragment.glsl  color_vertex.glsl  lighting_fragment.glsl  lighting_vertex.glsl  sprite_vertex.glsl  texture_fragment.glsl  texture_vertex.glsl  textured_fragment.glsl  textured_vertex.glsl
src/: Entity.c  Entity.h  Globals.c  Globals.h  Mesh.c  Mesh.h  Model.c  Model.h  Sprite.c  Sprite.h  Texture.c  Texture.h  Util.c  Util.h  main.c
